--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = /opt/homebrew/opt/python@3.12/bin
+home = /opt/homebrew/Cellar/python@3.12/3.12.6/Frameworks/Python.framework/Versions/3.12/bin
 include-system-site-packages = false
 version = 3.12.6
 executable = /opt/homebrew/Cellar/python@3.12/3.12.6/Frameworks/Python.framework/Versions/3.12/bin/python3.12
-command = /opt/homebrew/opt/python@3.12/bin/python3.12 -m venv /Applications/XAMPP/_flaskv3/env
+command = /Applications/XAMPP/_flaskv3/env/bin/python3 -m venv /Applications/XAMPP/_flaskv3/env
