--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 APScheduler==3.10.1
 certifi==2024.8.30
 click==8.1.7
+email-validator==2.0.0
 Flask==2.3.2
 Flask-APScheduler==1.13.1
 Flask-CORS==3.0.10
